Fix weird spacing

--- a/index.css
+++ b/index.css
@@ -11,7 +11,8 @@ body {
     background-image: url('images/canyoncraft.png');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed; 
+    background-attachment: fixed;
+    margin-top: 50px;
 }
 
 h1, h2 {
